--- a/src/package.json
+++ b/src/package.json
@@ -30,7 +30,10 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-bower-concat": "^0.6.0",
+    "grunt-contrib-jasmine": "^1.0.3",
     "grunt-contrib-jshint": "^0.12.0",
+    "grunt-jasmine-node": "^0.3.1",
+    "grunt-template-jasmine-requirejs": "^0.2.3",
     "jasmine": "^2.4.1",
     "jasmine-node": "^1.14.5",
     "load-grunt-tasks": "^3.4.0",
